--- a/lab01/lab/pyproject.toml
+++ b/lab01/lab/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "pre-commit>=4.3.0",
+    "pydantic-settings>=2.11.0",
 ]
 
 [project.scripts]
