--- a/lab01/lab/pyproject.toml
+++ b/lab01/lab/pyproject.toml
@@ -10,6 +10,8 @@ requires-python = ">=3.12"
 dependencies = [
     "pre-commit>=4.3.0",
     "pydantic-settings>=2.11.0",
+    "pytest>=8.4.2",
+    "pytest-dotenv>=0.5.2",
 ]
 
 [project.scripts]
