--- a/lab01/lab/pyproject.toml
+++ b/lab01/lab/pyproject.toml
@@ -8,10 +8,12 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.118.3",
     "pre-commit>=4.3.0",
     "pydantic-settings>=2.11.0",
     "pytest>=8.4.2",
     "pytest-dotenv>=0.5.2",
+    "uvicorn>=0.37.0",
 ]
 
 [project.scripts]
