--- a/lab01/lab/pyproject.toml
+++ b/lab01/lab/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.118.3",
+    "httpx>=0.28.1",
     "pre-commit>=4.3.0",
     "pydantic-settings>=2.11.0",
     "pytest>=8.4.2",
