--- a/lab01/lab/pyproject.toml
+++ b/lab01/lab/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic-settings>=2.11.0",
     "pytest>=8.4.2",
     "pytest-dotenv>=0.5.2",
+    "scikit-learn>=1.7.2",
     "uvicorn>=0.37.0",
 ]
 
