--- a/lab01/hw/app/pyproject.toml
+++ b/lab01/hw/app/pyproject.toml
@@ -7,7 +7,12 @@ authors = [
     { name = "Bartosz Hanc", email = "bartosz.hanc02@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "clean-text>=0.6.0",
+    "joblib>=1.5.2",
+    "torch>=2.8.0",
+    "transformers>=4.57.0",
+]
 
 [project.scripts]
 app = "app:main"
@@ -15,3 +20,9 @@ app = "app:main"
 [build-system]
 requires = ["uv_build>=0.8.23,<0.9.0"]
 build-backend = "uv_build"
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.3.0",
+    "pytest>=8.4.2",
+]
