--- a/lab01/hw/app/pyproject.toml
+++ b/lab01/hw/app/pyproject.toml
@@ -9,7 +9,9 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "clean-text>=0.6.0",
+    "fastapi>=0.118.3",
     "joblib>=1.5.2",
+    "pydantic>=2.12.0",
     "torch>=2.8.0",
     "transformers>=4.57.0",
 ]
@@ -23,6 +25,7 @@ build-backend = "uv_build"
 
 [dependency-groups]
 dev = [
+    "mypy>=1.18.2",
     "pre-commit>=4.3.0",
     "pytest>=8.4.2",
 ]
