--- a/lab01/hw/app/pyproject.toml
+++ b/lab01/hw/app/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi>=0.118.3",
     "joblib>=1.5.2",
     "pydantic>=2.12.0",
+    "sentence-transformers>=5.1.1",
     "torch>=2.8.0",
     "transformers>=4.57.0",
 ]
