--- a/lab01/hw/app/pyproject.toml
+++ b/lab01/hw/app/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "sentence-transformers>=5.1.1",
     "torch>=2.8.0",
     "transformers>=4.57.0",
+    "uvicorn>=0.37.0",
 ]
 
 [project.scripts]
