--- a/lab01/hw/app/pyproject.toml
+++ b/lab01/hw/app/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "clean-text>=0.6.0",
     "fastapi>=0.118.3",
     "joblib>=1.5.2",
+    "langdetect>=1.0.9",
     "pydantic>=2.12.0",
     "sentence-transformers>=5.1.1",
     "torch>=2.8.0",
