--- a/lab01/hw/app/pyproject.toml
+++ b/lab01/hw/app/pyproject.toml
@@ -9,9 +9,10 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "clean-text>=0.6.0",
+    "emoji~=1.6.3",
     "fastapi>=0.118.3",
+    "httpx>=0.28.1",
     "joblib>=1.5.2",
-    "langdetect>=1.0.9",
     "pydantic>=2.12.0",
     "sentence-transformers>=5.1.1",
     "torch>=2.8.0",
