--- a/lab04/pyproject.toml
+++ b/lab04/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pandas>=2.2.3",
     "pgvector>=0.4.0",
     "pillow>=11.1.0",
+    "polars>=1.35.1",
     "psycopg>=3.2.12",
     "pymilvus>=2.5.6",
     "pymupdf>=1.16.14",
