--- a/lab06/pyproject.toml
+++ b/lab06/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "cleanlab",
     "datasets",
     "giskard",
+    "hf-xet>=1.2.0",
     "jupyter",
     "matplotlib",
     "pandas",
