--- a/lab07/lab/pyproject.toml
+++ b/lab07/lab/pyproject.toml
@@ -23,3 +23,8 @@ torch = [
 name = "pytorch-cu121"
 url = "https://download.pytorch.org/whl/cu121"
 explicit = true
+
+[tool.uv.workspace]
+members = [
+    "onnx_app",
+]
