--- a/lab07/torch_app/Dockerfile
+++ b/lab07/torch_app/Dockerfile
@@ -1,7 +1,10 @@
 FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
 COPY . /app
 RUN uv sync
 RUN uv pip install torch --index-url https://download.pytorch.org/whl/cpu
-EXPOSE 8000
-CMD ["uv", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+EXPOSE 8001
+CMD ["uv", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
