--- a/lab09/app/pyproject.toml
+++ b/lab09/app/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "boto3>=1.42.3",
     "clean-text>=0.6.0",
     "emoji~=1.6.3",
     "fastapi>=0.118.3",
