--- a/lab12/lab/pyproject.toml
+++ b/lab12/lab/pyproject.toml
@@ -6,7 +6,7 @@ description = ""
 requires-python = "==3.11.*"
 
 dependencies = [
-    "apache-airflow[celery,postgres,standard,uv]==3.1.5",
+    "apache-airflow[celery,postgres,standard,uv,cloudpickle]==3.1.5",
     "twelvedata",
     "pandas",
     "pyarrow>=22.0.0",
@@ -19,6 +19,6 @@ dev = [
 ]
 
 airflow_common = [
-    "apache-airflow[celery,postgres,standard,uv]==3.1.5",
+    "apache-airflow[celery,postgres,standard,uv,cloudpickle]==3.1.5",
     "requests",
 ]
