--- a/lab12/lab/compose.yaml
+++ b/lab12/lab/compose.yaml
@@ -43,6 +43,8 @@ x-airflow-common: &airflow-common
       condition: service_healthy
     valkey:
       condition: service_healthy
+    localstack:
+      condition: service_healthy
 
 services:
   postgres:
@@ -124,6 +126,24 @@ services:
         condition: service_completed_successfully
     restart: always
 
+  localstack:
+    image: localstack/localstack
+    ports:
+      - "127.0.0.1:4566:4566" # LocalStack Gateway
+      - "127.0.0.1:4510-4559:4510-4559" # external services port range
+    environment:
+      SERVICES: "s3" # just S3 service
+    volumes:
+      - localstack_data:/var/lib/localstack
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - ./localstack-init:/etc/localstack/init
+    healthcheck:
+      test: ["CMD", "curl", "-fsS", "http://localhost:4566/_localstack/health"]
+      interval: 10s
+      retries: 10
+    restart: always
+
 volumes:
   postgres-db-volume:
   uv-cache:
+  localstack_data:
