--- a/lab12/lab/pyproject.toml
+++ b/lab12/lab/pyproject.toml
@@ -19,6 +19,7 @@ dev = [
 ]
 
 airflow_common = [
-    "apache-airflow[celery,postgres,standard,uv,cloudpickle]==3.1.5",
+    "apache-airflow[celery,postgres,standard,uv,cloudpickle,s3fs]==3.1.5",
     "requests",
+    "apache-airflow-providers-amazon",
 ]
