--- a/lab12/lab/compose.yaml
+++ b/lab12/lab/compose.yaml
@@ -40,6 +40,9 @@ x-airflow-common: &airflow-common
     AWS_SECRET_ACCESS_KEY: test
     AWS_DEFAULT_REGION: us-east-1
 
+    # Postgres storage connectin
+    AIRFLOW_CONN_POSTGRES_STORAGE: '{"conn_type": "postgres", "login": "exchange_data", "password": "exchange_data", "host": "storage_db", "port": 5432, "schema": "exchange_data"}'
+
   volumes:
     # volumes to sync local environment and containers
     - ./dags:/opt/airflow/dags
@@ -68,6 +71,23 @@ services:
       - postgres-db-volume:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "airflow"]
+      interval: 10s
+      retries: 5
+    restart: always
+
+  storage_db:
+    image: postgres:17
+    environment:
+      POSTGRES_USER: exchange_data
+      POSTGRES_PASSWORD: exchange_data
+      POSTGRES_DB: exchange_data
+    ports:
+      - "5433:5432"
+    volumes:
+      - storage-db-volume:/var/lib/postgresql/data
+      - ./init-db:/docker-entrypoint-initdb.d/
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "exchange_data"]
       interval: 10s
       retries: 5
     restart: always
@@ -156,5 +176,6 @@ services:
 
 volumes:
   postgres-db-volume:
+  storage-db-volume:
   uv-cache:
   localstack_data:
