--- a/lab12/hw/pyproject.toml
+++ b/lab12/hw/pyproject.toml
@@ -7,10 +7,9 @@ requires-python = "==3.11.*"
 
 dependencies = [
     "apache-airflow[celery,postgres,standard,uv,cloudpickle]==3.1.5",
-    "twelvedata",
-    "pandas",
-    "pyarrow>=22.0.0",
-    "requests",
+    "apache-airflow-providers-amazon",
+    "polars",
+    "scikit-learn",
 ]
 
 [dependency-groups]
@@ -20,6 +19,7 @@ dev = [
 
 airflow_common = [
     "apache-airflow[celery,postgres,standard,uv,cloudpickle,s3fs]==3.1.5",
-    "requests",
     "apache-airflow-providers-amazon",
+    "polars",
+    "scikit-learn",
 ]
