--- a/lab13/lab/pyproject.toml
+++ b/lab13/lab/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "mcp-use>=1.5.2",
     "openai<2",  # Guardrails AI limitation
     "polars>=1.37.1",
+    "pyarrow>=23.0.0",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "transformers[torch]>=4.51.0",
