--- a/lab13/lab/pyproject.toml
+++ b/lab13/lab/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "bitsandbytes>=0.49.1",
     "fastmcp>=2.14.3",
     "guardrails-ai>=0.7.2",
+    "matplotlib>=3.10.8",
     "mcp-use>=1.5.2",
     "openai<2",  # Guardrails AI limitation
     "pandas>=3.0.0",
